--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "voyago": {
+        "eventorg": {
             "root": "",
             "sourceRoot": "src",
             "projectType": "application",
@@ -73,18 +73,18 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
-                        "browserTarget": "voyago:build"
+                        "browserTarget": "eventorg:build"
                     },
                     "configurations": {
                         "production": {
-                            "browserTarget": "voyago:build:production"
+                            "browserTarget": "eventorg:build:production"
                         }
                     }
                 },
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "voyago:build"
+                        "browserTarget": "eventorg:build"
                     }
                 },
                 "test": {
@@ -120,7 +120,7 @@
                 }
             }
         },
-        "voyago-e2e": {
+        "eventorg-e2e": {
             "root": "e2e/",
             "projectType": "application",
             "prefix": "",
@@ -129,11 +129,11 @@
                     "builder": "@angular-devkit/build-angular:protractor",
                     "options": {
                         "protractorConfig": "e2e/protractor.conf.js",
-                        "devServerTarget": "voyago:serve"
+                        "devServerTarget": "eventorg:serve"
                     },
                     "configurations": {
                         "production": {
-                            "devServerTarget": "voyago:serve:production"
+                            "devServerTarget": "eventorg:serve:production"
                         }
                     }
                 },
@@ -149,5 +149,5 @@
             }
         }
     },
-    "defaultProject": "voyago"
+    "defaultProject": "eventorg"
 }
