--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "lodash": "latest",
+    "ngx-cookie-service": "^2.2.0",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
