--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@types/chart.js": "^2.7.50",
-    "angular-http-server": "1.9.0",
     "angular-bootstrap-md": "^7.4.3",
+    "angular-http-server": "1.9.0",
     "angularx-social-login": "^1.2.6",
     "bootstrap": "4.0.0",
     "chart.js": "^2.5.0",
@@ -37,6 +37,7 @@
     "jquery": "^3.3.1",
     "lodash": "latest",
     "ngx-cookie-service": "^2.2.0",
+    "ngx-spinner": "^7.2.0",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
